# LearnCMake

./: .gitignore  CMakeLists.txt
Demo1/: CMakeLists.txt  Demo1  main.c
Demo2/: CMakeLists.txt  TestLib.c  TestLib.h  TestLib2.c  TestLib2.h  main.c
Demo3/: CMakeLists.txt  main.c
Demo3/math/: CMakeLists.txt
Demo4/: CMakeLists.txt  config.h.in  main.c
Demo4/math/: CMakeLists.txt  MathFunctions.c  MathFunctions.h
